tests/parsing-test/test_out/impl-block-parse-out.txt
error: expected '\n' | ';' but got '\'
 --> impl-block\root.ctl:1:86
  |
1 | struct Struct { field : u32 ; } ; impl Struct {     fn constructor() -> Self => Self \ { field : 0 } ; fn method(& self) ->     uint => self.field ; } ;
  |                                                                                      ^ token located here
  |
  = info: list -> item -> impl -> list

error: expected Ident but got Operator
 --> impl-block\root.ctl:1:114
  |
1 | struct Struct { field : u32 ; } ; impl Struct {     fn constructor() -> Self => Self \ { field : 0 } ; fn method(& self) ->     uint => self.field ; } ;
  |                                                                                                                  ^ token located here
  |
  = info: list -> item -> impl -> list -> impl item -> function definition -> function signature -> list -> function argument -> name

error: expected '\n' | ';' but got '.'
 --> impl-block\root.ctl:1:141
  |
1 | struct Struct { field : u32 ; } ; impl Struct {     fn constructor() -> Self => Self \ { field : 0 } ; fn method(& self) ->     uint => self.field ; } ;
  |                                                                                                                                             ^ token located here
  |
  = info: list -> item -> impl -> list

